--- a/finalProject/nbproject/project.properties
+++ b/finalProject/nbproject/project.properties
@@ -33,9 +33,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/finalProject
 excludes=
+file.reference.mssql-jdbc-12.8.0.jre11.jar=C:\\Users\\long2\\Downloads\\sqljdbc_12.8.0.0_enu\\sqljdbc_12.8\\enu\\jars\\mssql-jdbc-12.8.0.jre11.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mssql-jdbc-12.8.0.jre11.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=finalProject
-main.class=view.Main
+main.class=main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
